@@ -1,4 +1,11 @@
 # rocketmq version 4.4.0
+
+rocketmq三种配置模式
+2m-2s-async(主从异步) [m1](./config/m1)
+2m-2s-sync(主从同步)  [m2](./config/m2)
+2m-noslave(仅master) [m3](./config/m3)
+
+
 ```bash
 vim .bash_profile 
 ROCKETMQ_HOME=/mnt/opt/rocketmq-4.4.0
@@ -11,7 +18,6 @@ source .bash_profile
 mkdir -p /mnt/data/rocketmq/store/commitlog
 mkdir -p /mnt/data/rocketmq/store/consumequeue
 mkdir -p /mnt/data/rocketmq/store/index
-mkdir -p /mnt/data/rocketmq/store/abort
 mkdir -p /mnt/log/rocketmq/logs
 
 
@@ -24,68 +30,6 @@ https://rocketmq.apache.org/docs/rmq-deployment/
 双主部署
 vim /mnt/opt/rocketmq-4.4.0/conf/2m-noslave/broker-a.properties
 vim /mnt/opt/rocketmq-4.4.0/conf/2m-noslave/broker-b.properties
-
-#所属集群名字
-brokerClusterName=rocketmq-cluster
-#broker名字，注意此处不同的配置文件填写的不一样
-brokerName=broker-a
-#0 表示 Master，>0 表示 Slave
-brokerId=0
-#nameServer地址，分号分割
-namesrvAddr=iss-half-ali-f-app-002-18-14:9876;iss-half-ali-f-app-003-18-15:9876
-#在发送消息时，自动创建服务器不存在的topic，默认创建的队列数
-defaultTopicQueueNums=4
-#是否允许 Broker 自动创建Topic，建议线下开启，线上关闭
-autoCreateTopicEnable=true
-#是否允许 Broker 自动创建订阅组，建议线下开启，线上关闭
-autoCreateSubscriptionGroup=true
-#Broker 对外服务的监听端口
-listenPort=10911
-#删除文件时间点，默认凌晨 4点
-deleteWhen=04
-#文件保留时间，默认 48 小时
-fileReservedTime=120
-#commitLog每个文件的大小默认1G
-mapedFileSizeCommitLog=1073741824
-#ConsumeQueue每个文件默认存30W条，根据业务情况调整
-mapedFileSizeConsumeQueue=300000
-#destroyMapedFileIntervalForcibly=120000
-#redeleteHangedFileInterval=120000
-#检测物理文件磁盘空间
-diskMaxUsedSpaceRatio=88
-#存储路径
-storePathRootDir=/mnt/data/rocketmq/store/
-#commitLog 存储路径
-storePathCommitLog=/mnt/data/rocketmq/store/commitlog
-#消费队列存储路径存储路径
-storePathConsumeQueue=/mnt/data/rocketmq/store/consumequeue
-#消息索引存储路径
-storePathIndex=/mnt/data/rocketmq/store/index
-#checkpoint 文件存储路径
-storeCheckpoint=/mnt/data/rocketmq/store/checkpoint
-#abort 文件存储路径
-abortFile=/mnt/data/rocketmq/store/abort
-#限制的消息大小
-maxMessageSize=65536
-#flushCommitLogLeastPages=4
-#flushConsumeQueueLeastPages=2
-#flushCommitLogThoroughInterval=10000
-#flushConsumeQueueThoroughInterval=60000
-#Broker 的角色
-#- ASYNC_MASTER 异步复制Master
-#- SYNC_MASTER 同步双写Master
-#- SLAVE
-brokerRole=ASYNC_MASTER
-#刷盘方式
-#- ASYNC_FLUSH 异步刷盘
-#- SYNC_FLUSH 同步刷盘
-flushDiskType=ASYNC_FLUSH
-#checkTransactionMessageEnable=false
-#发消息线程池数量
-#sendMessageThreadPoolNums=128
-#拉消息线程池数量
-#pullMessageThreadPoolNums=128
-
 
 
 
@@ -124,19 +68,88 @@ nohup ./bin/mqnamesrv &
 
 
 
+[hadoop@iss-half-ali-f-app-002-18-14 bin]$ cat mqnamesrv
+sh ${ROCKETMQ_HOME}/bin/runserver.sh org.apache.rocketmq.namesrv.NamesrvStartup $@
+
+
+[ ! -e "$JAVA_HOME/bin/java" ] && JAVA_HOME=$HOME/jdk/java
+[ ! -e "$JAVA_HOME/bin/java" ] && JAVA_HOME=/usr/java
+[ ! -e "$JAVA_HOME/bin/java" ] && error_exit "Please set the JAVA_HOME variable in your environment, We need java(x64)!"
+
+export JAVA_HOME
+export JAVA="$JAVA_HOME/bin/java"
+export BASE_DIR=$(dirname $0)/..
+export CLASSPATH=.:${BASE_DIR}/conf:${CLASSPATH}
+
+#===========================================================================================
+# JVM Configuration
+#===========================================================================================
+JAVA_OPT="${JAVA_OPT} -server -Xms512m -Xmx512m -Xmn256m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=320m"
+JAVA_OPT="${JAVA_OPT} -XX:+UseConcMarkSweepGC -XX:+UseCMSCompactAtFullCollection -XX:CMSInitiatingOccupancyFraction=70 -XX:+CMSParallelRemarkEnabled -XX:SoftRefLRUPolicyMSPerMB=0 -XX:+CMSClassUnloadingEnabled -XX:SurvivorRatio=8  -XX:-UseParNewGC"
+JAVA_OPT="${JAVA_OPT} -verbose:gc -Xloggc:/dev/shm/rmq_srv_gc.log -XX:+PrintGCDetails"
+JAVA_OPT="${JAVA_OPT} -XX:-OmitStackTraceInFastThrow"
+JAVA_OPT="${JAVA_OPT}  -XX:-UseLargePages"
+JAVA_OPT="${JAVA_OPT} -Djava.ext.dirs=${JAVA_HOME}/jre/lib/ext:${BASE_DIR}/lib"
+#JAVA_OPT="${JAVA_OPT} -Xdebug -Xrunjdwp:transport=dt_socket,address=9555,server=y,suspend=n"
+JAVA_OPT="${JAVA_OPT} ${JAVA_OPT_EXT}"
+JAVA_OPT="${JAVA_OPT} -cp ${CLASSPATH}"
+
+$JAVA ${JAVA_OPT} $@
+
 
 nohup ./bin/mqnamesrv &
 
 
-[hadoop@iss-half-ali-f-app-001-18-13 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c /mnt/opt/rocketmq-4.4.0/conf/2m-noslave/broker-a.properties &
-[hadoop@iss-half-ali-f-app-001-18-13 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c /mnt/opt/rocketmq-4.4.0/conf/2m-noslave/broker-b.properties &
+[hadoop@iss-half-ali-f-app-002-18-14 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c /mnt/opt/rocketmq-4.4.0/conf/2m-noslave/broker-a.properties &
+[hadoop@iss-half-ali-f-app-003-18-15 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c /mnt/opt/rocketmq-4.4.0/conf/2m-noslave/broker-b.properties &
+
+sh ${ROCKETMQ_HOME}/bin/runbroker.sh org.apache.rocketmq.broker.BrokerStartup $@
+
+[ ! -e "$JAVA_HOME/bin/java" ] && JAVA_HOME=$HOME/jdk/java
+[ ! -e "$JAVA_HOME/bin/java" ] && JAVA_HOME=/usr/java
+[ ! -e "$JAVA_HOME/bin/java" ] && error_exit "Please set the JAVA_HOME variable in your environment, We need java(x64)!"
+
+export JAVA_HOME
+export JAVA="$JAVA_HOME/bin/java"
+export BASE_DIR=$(dirname $0)/..
+export CLASSPATH=.:${BASE_DIR}/conf:${CLASSPATH}
+
+#===========================================================================================
+# JVM Configuration
+#===========================================================================================
+JAVA_OPT="${JAVA_OPT} -server -Xms512m -Xmx512m -Xmn256m"
+JAVA_OPT="${JAVA_OPT} -XX:+UseG1GC -XX:G1HeapRegionSize=16m -XX:G1ReservePercent=25 -XX:InitiatingHeapOccupancyPercent=30 -XX:SoftRefLRUPolicyMSPerMB=0"
+JAVA_OPT="${JAVA_OPT} -verbose:gc -Xloggc:/dev/shm/mq_gc_%p.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintAdaptiveSizePolicy"
+JAVA_OPT="${JAVA_OPT} -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=30m"
+JAVA_OPT="${JAVA_OPT} -XX:-OmitStackTraceInFastThrow"
+JAVA_OPT="${JAVA_OPT} -XX:+AlwaysPreTouch"
+JAVA_OPT="${JAVA_OPT} -XX:MaxDirectMemorySize=15g"
+JAVA_OPT="${JAVA_OPT} -XX:-UseLargePages -XX:-UseBiasedLocking"
+JAVA_OPT="${JAVA_OPT} -Djava.ext.dirs=${JAVA_HOME}/jre/lib/ext:${BASE_DIR}/lib"
+#JAVA_OPT="${JAVA_OPT} -Xdebug -Xrunjdwp:transport=dt_socket,address=9555,server=y,suspend=n"
+JAVA_OPT="${JAVA_OPT} ${JAVA_OPT_EXT}"
+JAVA_OPT="${JAVA_OPT} -cp ${CLASSPATH}"
+
+numactl --interleave=all pwd > /dev/null 2>&1
+if [ $? -eq 0 ]
+then
+	if [ -z "$RMQ_NUMA_NODE" ] ; then
+		numactl --interleave=all $JAVA ${JAVA_OPT} $@
+	else
+		numactl --cpunodebind=$RMQ_NUMA_NODE --membind=$RMQ_NUMA_NODE $JAVA ${JAVA_OPT} $@
+	fi
+else
+	$JAVA ${JAVA_OPT} $@
+fi
 
 
 
 
 
-[hadoop@iss-half-ali-f-app-001-18-13 rocketmq-4.4.0]$ ./bin/mqshutdown namesrv
 
+
+[hadoop@iss-half-ali-f-app-001-18-14 rocketmq-4.4.0]$ ./bin/mqshutdown namesrv
+[hadoop@iss-half-ali-f-app-003-18-15 rocketmq-4.4.0]$ ./bin/mqshutdown broker
 
 
 
@@ -159,4 +172,76 @@ nohup ./bin/mqnamesrv &
 
 /mnt/log/rocketmq/logs/rocketmqlogs
 tail -100f broker.log
+
+
+
+
+
+### 2m-2s-async
+[hadoop@iss-half-ali-f-app-002-18-14 rocketmq-4.4.0]$ mkdir -p /mnt/data/rocketmq/store/broker-a /mnt/data/rocketmq/store/broker-a/nsumequeue /mnt/data/rocketmq/store/broker-a/commitlog /mnt/data/rocketmq/store/broker-a/index /mnt/data/rocketmq/logs /mnt/data/rocketmq/store/broker-b-s /mnt/data/rocketmq/store/broker-b-s/nsumequeue /mnt/data/rocketmq/store/broker-b-s/commitlog /mnt/data/rocketmq/store/broker-b-s/index
+
+[hadoop@iss-half-ali-f-app-002-18-14 rocketmq-4.4.0]$ mkdir -p /mnt/data/rocketmq/store/broker-a-s /mnt/data/rocketmq/store/broker-a-s/nsumequeue /mnt/data/rocketmq/store/broker-a-s/commitlog /mnt/data/rocketmq/store/broker-a-s/index /mnt/data/rocketmq/logs /mnt/data/rocketmq/store/broker-b /mnt/data/rocketmq/store/broker-b/nsumequeue /mnt/data/rocketmq/store/broker-b/commitlog /mnt/data/rocketmq/store/broker-b/index
+
+
+
+nohup ./bin/mqbroker -c ./conf/2m-2s-async/broker-a.properties &
+nohup ./bin/mqbroker -c ./conf/2m-2s-async/broker-b-s.properties &
+
+
+nohup ./bin/mqbroker -c ./conf/2m-2s-async/broker-b.properties &
+nohup ./bin/mqbroker -c ./conf/2m-2s-async/broker-a-s.properties &
+
+
+
+
+[hadoop@iss-half-ali-f-app-002-18-14 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c ./conf/2m-2s-async/broker-a.properties &
+[hadoop@iss-half-ali-f-app-003-18-15 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c ./conf/2m-2s-async/broker-b.properties &
+
+[hadoop@iss-half-ali-f-app-002-18-14 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c ./conf/2m-2s-async/broker-b-s.properties &
+[hadoop@iss-half-ali-f-app-003-18-15 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c ./conf/2m-2s-async/broker-a-s.properties &
+
+
+
+[hadoop@iss-half-ali-f-app-002-18-14 rocketmq-4.4.0]$ ./bin/mqadmin clusterlist -n 172.16.18.14:9876
+#Cluster Name     #Broker Name            #BID  #Addr                  #Version                #InTPS(LOAD)       #OutTPS(LOAD) #PCWait(ms) #Hour #SPACE
+rocketmq-cluster  broker-a                0     172.16.18.14:10911     V4_4_0                   0.00(0,0ms)         0.00(0,0ms)          0 430898.04 0.0290
+rocketmq-cluster  broker-a                1     172.16.18.15:11911     V4_4_0                   0.00(0,0ms)         0.00(0,0ms)          0 430898.04 0.0290
+rocketmq-cluster  broker-b                0     172.16.18.15:10911     V4_4_0                   0.00(0,0ms)         0.00(0,0ms)          0 430898.04 0.0290
+rocketmq-cluster  broker-b                1     172.16.18.14:11911     V4_4_0                   0.00(0,0ms)         0.00(0,0ms)          0 430898.04 0.0290
+
+
+
+
+# 2m-2s-sync
+[hadoop@iss-half-ali-f-app-002-18-14 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c ./conf/2m-2s-sync/broker-a.properties &
+[hadoop@iss-half-ali-f-app-003-18-15 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c ./conf/2m-2s-sync/broker-b.properties &
+
+[hadoop@iss-half-ali-f-app-002-18-14 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c ./conf/2m-2s-sync/broker-b-s.properties &
+[hadoop@iss-half-ali-f-app-003-18-15 rocketmq-4.4.0]$ nohup ./bin/mqbroker -c ./conf/2m-2s-sync/broker-a-s.properties &
+[hadoop@iss-half-ali-f-app-002-18-14 rocketmq-4.4.0]$ ./bin/mqadmin clusterlist -n 172.16.18.14:9876
+#Cluster Name     #Broker Name            #BID  #Addr                  #Version                #InTPS(LOAD)       #OutTPS(LOAD) #PCWait(ms) #Hour #SPACE
+rocketmq-cluster  broker-a                0     172.16.18.14:10911     V4_4_0                   0.00(0,0ms)         0.00(0,0ms)          0 430898.48 0.0290
+rocketmq-cluster  broker-a                1     172.16.18.15:11911     V4_4_0                   0.00(0,0ms)         0.00(0,0ms)          0 430898.48 0.0290
+rocketmq-cluster  broker-b                0     172.16.18.15:10911     V4_4_0                   0.00(0,0ms)         0.00(0,0ms)          0 430898.48 0.0290
+rocketmq-cluster  broker-b                1     172.16.18.14:11911     V4_4_0                   0.00(0,0ms)         0.00(0,0ms)          0 430898.48 0.0290
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
